# bantam

./: .gitignore  Cargo.toml  LICENSE  README.md  codebook.toml
src/: main.rs
z80/: Cargo.toml
z80/src/: bus.rs  cpu.rs  decode.rs  flags.rs  lib.rs  registers.rs
z80/tools/sjasmplus/: Dockerfile  README.md  fib.asm  sjasmplus  test.asm
z80/tools/utils/: op2hex.sh
